<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#ffefd5"
    android:orientation="vertical" >
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="7dp"
        android:orientation="horizontal">
        
        <TextView android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/limit"
            android:layout_weight="2"
            android:layout_marginRight="5dp"
            android:textSize="20dp"
            android:gravity="center"
            android:textColor="#000000"/>
        
        <EditText android:id="@+id/limit_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:hint="@string/limit_hint"
            android:digits="1234567890."
            android:layout_gravity="center"/>
    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:orientation="horizontal">
        
        <Button android:id="@+id/setting_sure"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sure"
            android:layout_marginRight="5dp"/>
        
        <Button android:id="@+id/setting_cancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"/>"
    </LinearLayout>

</LinearLayout>